fix: add the flex to keep the game board in the container on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,12 @@ h1,h2,h2 {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+.container--center{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container__title{
     text-align: center;
     margin-bottom: 30px;
@@ -131,7 +137,7 @@ h1,h2,h2 {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     z-index: 2;
     overflow: auto;
-    max-height: 70vh;
+    max-height: 70%;
     width: 70%;
 }
 
